[package]
name = "ssimulacra2_rs"
version = "0.5.2"
edition = "2021"
description = "Binary exposing the ssimulacra2 rust implementation"
repository = "https://github.com/rust-av/ssimulacra2_bin"
homepage = "https://github.com/rust-av/ssimulacra2_bin"
license = "BSD-2-Clause"

# When changing MSRV: Also update .github/workflows/rust.yml
rust-version = "1.74"

[dependencies]
anyhow = "1.0.55"
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.28"
indicatif = "0.17.1"
num-traits = { version = "0.2.15", optional = true }
ssimulacra2 = { git = "https://github.com/rust-av/ssimulacra2", default-features = false }

[dependencies.av-metrics-decoders]
version = "0.3.1"
features = ["vapoursynth", "y4m"]
optional = true

[dependencies.statrs]
version = "0.18"
default-features = false
optional = true

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg", "webp", "hdr", "exr"]

[dependencies.plotters]
version = "0.3.4"
default-features = false
features = ["bitmap_backend", "area_series", "ttf"]
optional = true

[profile.release]
lto = "thin"
codegen-units = 1

[features]
default = ["video"]
video = ["dep:av-metrics-decoders", "dep:plotters", "dep:statrs", "dep:num-traits"]
